# pet

./: .gitattributes  .gitignore  DESIGN.md  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
scripts/: make-missing-frame.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs  tray.rs  windows.rs
src/components/: CharacterEditor.tsx  CharacterList.tsx  FramePreviewGrid.tsx  PetInstance.tsx  PetLayer.tsx  SettingsWindow.tsx
src/lib/: defaults.ts  frameMapper.ts  frameMovement.ts  i18n.ts  imageUtils.ts  petSizing.ts  settingsStore.ts  spriteUtils.ts  tauriApi.ts  windowPosition.ts
src/types/: pet.ts  settings.ts
